<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@color/colorPrimary"
    android:layout_height="match_parent">

    <TextView
        android:layout_marginTop="150dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textColor="@android:color/white"
        android:textSize="20dp"
        android:text="@string/entercode"
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/text2"
        android:text="@string/codeSent"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@id/text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textColor="@android:color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/code"
        app:layout_constraintTop_toBottomOf="@id/text2"
        android:layout_marginTop="55dp"
        android:textColorHint="@color/colorAccent"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/codeET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/codeAtSMS"
            android:textSize="16sp"
            android:inputType="phone"
            app:backgroundTint="@android:color/white"
            android:maxLines="1"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_marginTop="16dp"
        android:text="@string/codeactivetime"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@id/code"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textColor="@android:color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


    <LinearLayout
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@drawable/button_gradient"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <Button
            android:layout_width="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/more"
            android:textSize="18sp"
            android:layout_marginRight="20dp"
            android:textColor="@android:color/white"
            android:layout_height="match_parent"
            android:layout_marginEnd="20dp" />

        <ImageView
            android:src="@drawable/arrow_forward"
            android:layout_width="18dp"
            android:layout_height="18dp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>