<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimary"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

    <TextView
        android:id="@+id/spinnerHint"
        android:layout_marginLeft="19dp"
        android:textSize="12sp"
        android:text="@string/startTime"
        android:textColor="@android:color/darker_gray"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="19dp" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:layout_below="@id/spinnerHint"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:id="@+id/startSpinner"
        style="@style/mySpinnerItemStyle"
        android:layout_marginBottom="18dp"
        app:backgroundTint="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_below="@id/startSpinner"
        android:id="@+id/spinnerHint2"
        android:textSize="12sp"
        android:layout_marginLeft="19dp"
        android:layout_marginTop="43dp"
        android:text="@string/finishTime"
        android:textColor="@android:color/darker_gray"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="19dp" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:layout_below="@id/spinnerHint2"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:id="@+id/finishSpinner"
        style="@style/mySpinnerItemStyle"
        android:layout_marginBottom="18dp"
        app:backgroundTint="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_below="@id/finishSpinner"
        android:id="@+id/spinnerHint3"
        android:layout_marginLeft="19dp"
        android:textSize="12sp"
        android:layout_marginTop="43dp"
        android:text="@string/lateTime"
        android:textColor="@android:color/darker_gray"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="19dp" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:layout_below="@id/spinnerHint3"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:id="@+id/lateSpinner"
        style="@style/mySpinnerItemStyle"
        android:layout_marginBottom="18dp"
        app:backgroundTint="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    </RelativeLayout>

    <LinearLayout
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/button_gradient"
        android:id="@+id/addLayout"
        android:gravity="center"
        android:clickable="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true">

        <ImageView
            android:src="@drawable/user_add"
            android:layout_width="24dp"
            app:tint="@color/colorAccent"
            android:layout_height="24dp" />
        <Button
            android:layout_width="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/add"
            android:layout_marginLeft="17dp"
            android:textSize="18sp"
            android:id="@+id/addBtn"
            android:textColor="@android:color/white"
            android:layout_height="match_parent"
            android:layout_marginStart="17dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>