<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/sad"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:src="@drawable/sad"
        android:layout_marginTop="150dp"
        android:layout_width="110dp"
        android:layout_height="110dp" />

    <TextView
        app:layout_constraintTop_toBottomOf="@id/sad"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/couldntrecognize"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        android:layout_marginTop="48dp"
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:textColor="@android:color/white"
        android:textSize="13sp"
        android:layout_marginTop="20dp"
        android:padding="20dp"
        android:text="@string/smsinfo"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/text1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@drawable/button_gradient"
        android:id="@+id/bottomLayout"
        android:gravity="center"
        android:clickable="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:id="@+id/bottomIcon"
            android:duplicateParentState="true"
            android:clickable="false"
            android:src="@drawable/send" />

        <Button
            android:layout_width="wrap_content"
            android:id="@+id/bottomTxt"
            android:duplicateParentState="true"
            android:background="@android:color/transparent"
            android:text="@string/sendsms"
            android:textSize="18sp"
            android:clickable="false"
            android:textColor="@android:color/white"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>