<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@color/colorPrimary"
    android:layout_height="match_parent">

    <TextView
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="100dp"
        android:id="@+id/text"
        android:text="@string/errorText"
        android:textColor="@android:color/white"
        android:textSize="18dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ImageView
        android:id="@+id/error"
        app:layout_constraintTop_toBottomOf="@id/text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="20dp"
        android:layout_width="20dp"
        android:src="@drawable/error_outline"
        android:layout_height="20dp" />

    <ImageView
        android:layout_marginTop="20dp"
        android:id="@+id/photo"
        app:layout_constraintTop_toBottomOf="@id/error"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:src="@drawable/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


    <TextView
        app:layout_constraintTop_toBottomOf="@id/photo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="16dp"
        android:text="@string/enterWithSms"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


    <LinearLayout
        android:id="@+id/tokenPhoto"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:orientation="horizontal"
        android:baselineAligned="false">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/refreshLayout"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1">
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/refresh" />

            <Button
                android:layout_width="wrap_content"
                android:background="@android:color/transparent"
                android:text="@string/refresh"
                android:textColor="@android:color/white"
                android:id="@+id/refresh"
                android:layout_marginLeft="18dp"
                style="?android:buttonBarButtonStyle"
                android:textSize="18sp"
                android:layout_height="wrap_content"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/cancelLayout"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1">

            <ImageView
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:src="@drawable/close" />

            <Button
                android:layout_width="wrap_content"
                android:text="@string/cancel"
                android:textSize="18sp"
                style="?android:buttonBarButtonStyle"
                android:textColor="@android:color/white"
                android:layout_height="wrap_content"
                />


        </LinearLayout>

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>