<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/commentInput"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="55dp"
        android:textColorHint="@color/colorAccent"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:hint="@string/enterComment"
            android:textSize="16sp"
            android:inputType="phone"
            app:backgroundTint="@android:color/white"
            android:maxLines="1"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        app:layout_constraintTop_toBottomOf="@id/commentInput"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="wrap_content"
        android:id="@+id/subText"
        android:textSize="10sp"
        android:layout_marginLeft="19dp"
        android:layout_height="wrap_content"
        android:textColor="@android:color/darker_gray"
        android:text="@string/lateReason" />

    <LinearLayout
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@drawable/button_gradient"
        android:id="@+id/bottomLayout"
        android:gravity="center"
        android:clickable="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true">



        <Button
            android:layout_width="wrap_content"
            android:id="@+id/ok"
            android:duplicateParentState="true"
            android:background="@android:color/transparent"
            android:text="@string/send"
            android:textSize="18sp"
            android:clickable="false"
            android:textColor="@android:color/white"
            android:layout_height="match_parent"
            android:layout_marginRight="20dp"
            android:layout_marginEnd="20dp" />


        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:duplicateParentState="true"
            android:clickable="false"
            android:tint="@color/colorAccent"
            android:src="@drawable/send" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>