<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimary"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/positionInput"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="117dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:textColorHint="@color/colorAccent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/positionET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:hint="@string/position"
            app:backgroundTint="@android:color/white"
            android:maxLines="1"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        app:layout_constraintTop_toBottomOf="@id/positionInput"
        android:layout_marginTop="55dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:id="@+id/spinnerHint"
        android:layout_marginLeft="19dp"
        android:text="@string/group"
        android:textColor="@android:color/darker_gray"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="19dp" />

    <androidx.appcompat.widget.AppCompatSpinner
        app:layout_constraintTop_toBottomOf="@id/spinnerHint"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:id="@+id/spinner"
        style="@style/mySpinnerItemStyle"
        android:layout_marginBottom="12dp"
        app:backgroundTint="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <LinearLayout
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@drawable/button_gradient"
        android:gravity="center"
        android:clickable="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true">
        <Button
            android:layout_width="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/more"
            android:textSize="18sp"
            android:textColor="@android:color/white"
             android:layout_height="match_parent"
            android:layout_marginRight="20dp"
          />

        <ImageView
            android:src="@drawable/arrow_forward"
            android:layout_width="18dp"
            android:layout_height="18dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>